--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/boilerplate
+spring.datasource.url=jdbc:postgresql://localhost:5432/eksisozluk
 spring.datasource.username=postgres
 spring.datasource.password=verder123
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
